<resources>
    <string name="app_name">Platform</string>
    <string name="doublebackmessage">Please click BACK again to exit</string>
    <string name="mylevels">My Levels</string>
    <string name="default_notification_channel_id" translatable="false">5700</string>
    <string name="search">Search . . .</string>
    <string name="students">Student\'s</string>
    <string name="ourlanguagelearners">Our Language Learners</string>
    <string name="podcasts">Podcasts</string>
    <string name="books">Books</string>
    <string name="category">Category</string>
    <string name="music">Music</string>
    <string name="trendingpodcast">Trending Podcast</string>
    <string name="successstories">Success Stories</string>
    <string name="hereisyourlastactivity.">Here is your last activity.</string>
    <string name="yourprogress">Your Progress</string>
    <string name="getrewardbydoingtasks">Get rewarded by doing tasks!</string>
    <string name="yourlevels">Your Levels</string>
    <string name="min">Mins</string>
    <string name="yourstatistics">Your Statistics</string>
    <string name="seehowyoudidlastdays.">See how you did last 7 days.</string>
    <string name="weeklytimeonapp">Weekly time on app</string>
    <string name="weekly_watch_time">Weekly watch time</string>
    <string name="correct_answers">Correct answers</string>
    <string name="incorrect_answers">Incorrect answers</string>
    <string name="points_to_get_rewarded">Points to get rewarded!</string>
    <string name="profile">Profile</string>
    <string name="settings_preferences"><![CDATA[Settings & Preferences]]></string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="getverificationcode">Get Verification Code</string>
    <string name="enterphonenumbertologin">Enter your mobile number to sign in.</string>
    <string name="enterverificationcode">Enter Verification Code</string>
    <string name="course_list">Course List</string>
    <string name="h">h</string>
    <string name="lessons">Lessons</string>
    <string name="courseoverview">Course Overview</string>
    <string name="version">Version</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="speaking">Speaking</string>
    <string name="listening">Listening</string>
    <string name="grammar">Grammar</string>
    <string name="combinationexercise">Combination Exercises</string>
    <string name="practices">Practices</string>
    <string name="finalexam">Final Exam</string>
    <string name="confirm">Confirm</string>
    <string name="placeeverywordincorrectgroup">Place every word in correct group.</string>
    <string name="write_here">Write here</string>
    <string name="complete_the_sentences_using_the_provided_words">Complete the sentences using the provided words.</string>
    <string name="tap_and_hold_the_button_to_record">Tap and Hold the button to record.</string>
    <string name="like">Like</string>
    <string name="read_the_paragraph_below">Read the paragraph below.</string>
    <string name="read_the_question_below">Read the question below.</string>
    <string name="record_your_voice_while_reading_the_paragraph_below">Record your voice while reading the paragraph below</string>
    <string name="write_an_essay">Write an essay</string>
    <string name="word">Word count :</string>
</resources>