<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.platform.ui.registeration.LoginViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_200sdp"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.android.platform.utils.font.QuicksandBold
            android:id="@+id/lblLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:padding="@dimen/_1sdp"
            android:text="@string/welcome"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@+id/imgLogin" />


        <com.android.platform.utils.font.Inter
            android:id="@+id/lblDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enterphonenumbertologin"
            android:textColor="#8023222F"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/lblLogin" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/bg_edittext"
            android:hint="0912"
            android:inputType="phone"
            android:lines="0"
            android:maxLength="11"
            android:textColorHint="#ADCECE"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/lblDes"
            tools:layout_editor_absoluteX="16dp" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/phone"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/edtPhone"
            app:layout_constraintStart_toStartOf="@+id/edtPhone"
            app:layout_constraintTop_toTopOf="@+id/edtPhone" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/button_simple"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/getverificationcode"
            android:textColor="#fff"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
