<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.android.platform.ui.course.course.CourseActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/pageBackground"
        android:paddingStart="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp">


        <com.android.platform.utils.font.QuicksandBold
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/course_list"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgBack"
            android:onClick="@{()->viewModel.back()}"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.android.platform.di.factory.V1ExoPlayerView
            android:layout_marginTop="@dimen/_12sdp"
            android:id="@+id/custom_exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:padding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

        <com.android.platform.utils.font.QuicksandBold
            android:id="@+id/lblOverView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/courseoverview"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_exo_player_view" />

        <LinearLayout
            android:id="@+id/lbldurationContainer"
            app:layout_constraintBottom_toBottomOf="@+id/lblOverView"
            android:orientation="horizontal"
            android:background="@drawable/cube_item_overview"
            android:layout_width="wrap_content"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintStart_toEndOf="@+id/lblOverView"
            app:layout_constraintEnd_toStartOf="@+id/lblPracticeContainer"
            app:layout_constraintTop_toTopOf="@+id/lblOverView"
            android:layout_height="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:src="@drawable/clock_item_overview"
                android:gravity="center_vertical" />

            <com.android.platform.utils.font.InterBold
                android:id="@+id/lblDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="45"
                android:textSize="@dimen/_11sdp"
                android:gravity="center_vertical" />

            <com.android.platform.utils.font.Inter
                android:layout_width="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:text="@string/min"
                android:gravity="center_vertical" />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/lblPracticeContainer"
            app:layout_constraintBottom_toBottomOf="@+id/lblOverView"
            android:orientation="horizontal"
            android:background="@drawable/cube_item_overview"
            android:layout_width="wrap_content"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_5sdp"
            android:backgroundTintMode="multiply"
            android:backgroundTint="#393156"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbldurationContainer"
            app:layout_constraintTop_toTopOf="@+id/lblOverView"
            android:layout_height="@dimen/_25sdp">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_height="match_parent"
                android:src="@drawable/learn_course_overview"
                android:gravity="center_vertical" />

            <com.android.platform.utils.font.InterBold
                android:id="@+id/lblPractice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="45"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/white"
                android:gravity="center_vertical" />

            <com.android.platform.utils.font.Inter
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:textSize="@dimen/_10sdp"
                android:text="@string/practices"
                android:textColor="@color/white"
                android:gravity="center_vertical" />
        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblOverView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>